CHANGES
=======

* update doc
* add doc
* add doc and cloudwatch_publisher
* first build
* update setpu.cfg
* init project