@@ -12,3 +12,7 @@ sphinx-build docs/source docs/build
 packaging
 =========
 python setup.py sdist
+
+install
+=======
+python -m pip install watcher-0.0.1.dev7.tar.gz
