@@ -2,6 +2,8 @@
 # -*- coding: utf-8 -*-
 
 from __future__ import print_function
+from watcher.cloudwatch.cloudwatch_publisher import start
 
+start()
 if __name__ == '__main__':
     pass
